[package]
authors = ["Nathan Gardet-Derc"]
edition = "2021"
license = "Apache-2.0"
name    = "pallet-reminder"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = [
	"derive",
] }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[dev-dependencies]
sp-core    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io      = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
std     = ["codec/std", "scale-info/std", "frame-support/std", "frame-system/std"]
