[package]
authors = ["Timothée Delabrouille <https://github.com/tdelabro>"]
edition = "2021"
license = "Apache-2.0"
name    = "pallet-to-mock"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = [
	"derive",
] }

frame-support = "38.0.0"
frame-system = "38.0.0"
pallet-balances = "39.0.0"
sp-std = "14.0.0"

[dev-dependencies]
#frame-support-test = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-io = "38.0.0"
sp-core = "34.0.0"
sp-runtime = "39.0.2"

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"pallet-balances/std",
]
