
[package]
authors = ["Timothée Delabrouille <https://github.com/tdelabro>"]
edition = "2021"
license = "Apache-2.0"
name    = "pallet-price-oracle"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.160", default-features = false, features = [
	"alloc",
	"derive",
] }
serde_json = { version = "1.0.96", default-features = false, features = [
	"alloc",
] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }

[dev-dependencies]
sp-core     = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime  = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"serde_json/std",
]
