
[package]
authors = ["Timothée Delabrouille <https://github.com/tdelabro>"]
edition = "2021"
license = "Apache-2.0"
name    = "pallet-price-oracle"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = [
	"derive",
] }

frame-support = "38.0.0"
frame-system = "38.0.0"

serde = { version = "1.0.214", default-features = false, features = [
	"alloc",
	"derive",
] }
serde_json = { version = "1.0.132", default-features = false, features = [
	"alloc",
] }
sp-arithmetic = "26.0.0"
sp-std = "14.0.0"

[dev-dependencies]
sp-io = "38.0.0"
sp-core = "34.0.0"
sp-runtime = "39.0.2"
sp-keystore = "0.40.0"

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"serde_json/std",
]
